--- a/pages/pun.html
+++ b/pages/pun.html
@@ -31,7 +31,7 @@
 	<div class="game-box p-2" id="185">
 		<h3>185</h3>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
+<p><strong>Description:</strong><br><ul><li>Players get a suggestion and one at a time step forward and deliver a joke or pun with the format below.</li></ul><hr><p><strong>Example:</strong><br><ul><li>Suggestion: Banana<br>185 bananas walk into a bar.<br>The bartender says, we don't serve bananas here.<br>The 185 bananas say, what? are we too unappealing for you?</li><li>Alternate version:<br>185 bananas walk into a bar.<br>The bartender says, we don't serve bananas here.<br>The 185 bananas say, why not?<br> and the bartender says, you're too unappealing.</li></ul><hr>		<h6>Tags</h6>
 		<a href="performance.html">Performance</a> - <a href="pun.html">Pun</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
