--- a/pages/child_friendly.html
+++ b/pages/child_friendly.html
@@ -30,6 +30,9 @@
 				<li>
 					<h5><a href="#characterPanel">Character Panel</a></h5>
 				</li>
+				<li>
+					<h5><a href="#taxi">Taxi</a></h5>
+				</li>
 			</ul>
 		</div>
 
@@ -40,7 +43,7 @@
 	<div class="game-box p-2" id="alienTigerCow">
 		<h3>Alien Tiger Cow</h3>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr>		<h6>Tags</h6>
 		<a href="child_friendly.html">Child Friendly</a> - <a href="exercises.html">Exercise</a> - <a href="party.html">Party</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
@@ -52,7 +55,7 @@
 	<div class="game-box p-2" id="bunnyBunny">
 		<h3>Bunny Bunny</h3>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr>		<h6>Tags</h6>
 		<a href="child_friendly.html">Child Friendly</a> - <a href="energy.html">Energy</a> - <a href="listening.html">Listening</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
@@ -78,6 +81,18 @@
 		<hr>
 <p><strong>Description:</strong><br><ul><li>Two players start a scene and a third acts as a host. The host will ring a bell or say a phrase like change! or new decision! periodically after a line of dialogue has been said. The player who said that last line of dialoque will have to say a new line of dialogue to replace it.</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Player 1: What do you want?</li><li>Player 2: I want a muffin.</li><li>Host: Change!</li><li>Player 2: I want a whole cake to myself</li><li>Host: Change!</li><li>Player 2: I want you to love me again!</li></ul></p><hr><p><strong>Tips:</strong><ul><li>Try to heighten each time you are made to change a line of dialogue and go for a drastic change on the third changed line.</li><br><li>As the host, utilize the rule of three most of the time, only occasionally making the players change only one line of dialogue or making them change many lines in a long run of changes.</li></ul><hr></p>		<h6>Tags</h6>
 		<a href="character.html">Character</a> - <a href="child_friendly.html">Child Friendly</a> - <a href="exercises.html">Exercise</a> - <a href="performance.html">Performance</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- TAXI ---------- -->
+	<div class="game-box p-2" id="taxi">
+		<h3>Taxi</h3>
+		<hr>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr>		<h6>Tags</h6>
+		<a href="character.html">Character</a> - <a href="child_friendly.html">Child Friendly</a> - <a href="guessing.html">Guessing</a> - <a href="performance.html">Performance</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
 	</div>
