--- a/pages/guessing.html
+++ b/pages/guessing.html
@@ -21,6 +21,9 @@
 				<li>
 					<h5><a href="#chainMurder">Chain Murder</a></h5>
 				</li>
+				<li>
+					<h5><a href="#taxi">Taxi</a></h5>
+				</li>
 			</ul>
 		</div>
 
@@ -31,8 +34,20 @@
 	<div class="game-box p-2" id="chainMurder">
 		<h3>Chain Murder</h3>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr>		<h6>Tags</h6>
 		<a href="gibberis.html">Gibberish</a> - <a href="guessing.html">Guessing</a> - <a href="object_work.html">Object Work</a> - <a href="performance.html">Performance</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- TAXI ---------- -->
+	<div class="game-box p-2" id="taxi">
+		<h3>Taxi</h3>
+		<hr>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr>		<h6>Tags</h6>
+		<a href="character.html">Character</a> - <a href="child_friendly.html">Child Friendly</a> - <a href="guessing.html">Guessing</a> - <a href="performance.html">Performance</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
 	</div>
