--- a/pages/interview.html
+++ b/pages/interview.html
@@ -31,7 +31,7 @@
 	<div class="game-box p-2" id="ballad">
 		<h3>Ballad</h3>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr>		<h6>Tags</h6>
 		<a href="interview.html">Interview</a> - <a href="musical.html">Musical</a> - <a href="performance.html">Performance</a> - <a href="song_formats.html">Song Format</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
