--- a/pages/long_forms.html
+++ b/pages/long_forms.html
@@ -19,13 +19,13 @@
 		<div class="m-5 games-list">
 			<ul class="py-3">
 				<li>
-					<h5><a href="#5-4-3-2-1">5-4-3-2-1</a></h5>
-				</li>
-				<li>
 					<h5><a href="#balladeer">Balladeer</a></h5>
 				</li>
 				<li>
 					<h5><a href="#bat">Bat</a></h5>
+				</li>
+				<li>
+					<h5><a href="#typewriter">Typewriter</a></h5>
 				</li>
 			</ul>
 		</div>
@@ -33,23 +33,11 @@
 <hr class="thick-hr">
 
 <div class="m-5">
-	<!-- ---------- 5-4-3-2-1 ---------- -->
-	<div class="game-box p-2" id="5-4-3-2-1">
-		<h3>5-4-3-2-1</h3>
-		<hr>
-<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
-		<a href="long_forms.html">Long Form</a> - <a href="performance.html">Performance</a> - 
-		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
-	</div>
-
-	<hr class="thick-hr">
-
 	<!-- ---------- BALLADEER ---------- -->
 	<div class="game-box p-2" id="balladeer">
 		<h3>Balladeer</h3>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr>		<h6>Tags</h6>
 		<a href="long_forms.html">Long Form</a> - <a href="musical.html">Musical</a> - <a href="narrative.html">narrative</a> - <a href="performance.html">performance</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
@@ -61,8 +49,20 @@
 	<div class="game-box p-2" id="bat">
 		<h3>Bat</h3>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr>		<h6>Tags</h6>
 		<a href="long_forms.html">Long Form</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- TYPEWRITER ---------- -->
+	<div class="game-box p-2" id="typewriter">
+		<h3>Typewriter</h3>
+		<hr>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr>		<h6>Tags</h6>
+		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="long_forms.html">Long Form</a> - <a href="narrative.html">Narrative</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
 	</div>
