--- a/pages/narrative.html
+++ b/pages/narrative.html
@@ -21,6 +21,9 @@
 				<li>
 					<h5><a href="#bardsBallad">Bard's Ballad</a></h5>
 				</li>
+				<li>
+					<h5><a href="#typewriter">Typewriter</a></h5>
+				</li>
 			</ul>
 		</div>
 
@@ -31,8 +34,20 @@
 	<div class="game-box p-2" id="bardsBallad">
 		<h3>Bard's Ballad</h3>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Description...</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul></p><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr></p>		<h6>Tags</h6>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr>		<h6>Tags</h6>
 		<a href="group.html">Group Game</a> - <a href="musical.html">Musical</a> - <a href="narrative.html">Narrative</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- TYPEWRITER ---------- -->
+	<div class="game-box p-2" id="typewriter">
+		<h3>Typewriter</h3>
+		<hr>
+<p><strong>Description:</strong><br><ul><li>Description...</li></ul><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr>		<h6>Tags</h6>
+		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="long_forms.html">Long Form</a> - <a href="narrative.html">Narrative</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
 	</div>
